Hotfixes: toList() from java 16